tests/should_fail/type_tuple_wordform_wrong_type.nv
module main

// SHOULD FAIL: Tuple word form with wrong element types
let t: Tuple(Int, String) = (1, 2)
